--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,35 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 @import "tailwindcss";
+@plugin 'tailwind-scrollbar';
 
 @theme {
   --color-regal-green: #e7f9fd;
   --color-regal-green-2: #e7f9fd00;
+}
+
+@media print {
+  body * {
+    visibility: hidden;
+  }
+
+  .printable,
+  .printable * {
+    visibility: visible;
+  }
+
+  .printable {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    padding: 20px;
+    background: white;
+  }
+
+  .custom-scroll,
+  aside {
+    display: none !important;
+  }
 }
 
 * {
@@ -38,4 +64,20 @@
 
 .animate-fadeInRight {
   animation: fadeInRight 0.8s ease-out forwards;
+}
+.custom-scroll::-webkit-scrollbar {
+  width: 4px;
+}
+.custom-scroll::-webkit-scrollbar-thumb {
+  background-color: rgba(
+    107,
+    114,
+    128,
+    0.4
+  ); /* Tailwind's gray-500 with opacity */
+  border-radius: 8px;
+}
+.custom-scroll {
+  scrollbar-width: thin;
+  scrollbar-color: rgba(107, 114, 128, 0.4) transparent;
 }
