--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,40 @@
   font-family: "Inter", sans-serif;
 }
 
+.loader-dots .dot {
+  width: 12px;
+  height: 12px;
+  background-color: #ff7426;
+  border-radius: 9999px;
+  display: inline-block;
+  animation: dot-flash 1.4s infinite ease-in-out both;
+}
+
+.loader-dots .dot:nth-child(1) {
+  animation-delay: -0.32s;
+}
+
+.loader-dots .dot:nth-child(2) {
+  animation-delay: -0.16s;
+}
+
+.loader-dots .dot:nth-child(3) {
+  animation-delay: 0;
+}
+
+@keyframes dot-flash {
+  0%,
+  80%,
+  100% {
+    opacity: 0.2;
+    transform: scale(0.8);
+  }
+  40% {
+    opacity: 1;
+    transform: scale(1.2);
+  }
+}
+
 @keyframes fadeInLeft {
   0% {
     opacity: 0;
