--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,13 @@
   font-family: "Inter", sans-serif;
 }
 
+html,
+body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
 .loader-dots .dot {
   width: 12px;
   height: 12px;
